Updated resoources page and navbar and footer of every page.

--- a/events.html
+++ b/events.html
@@ -11,7 +11,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">  <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="events.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>  <script src="myScript.js"></script>
   <script src="myScript.js"></script>
@@ -19,34 +19,34 @@
 
 <body>
   <nav class="navbar navbar-expand-sm h-100 bg-1" id="top">
-    <div class="container-fluid h-100">
+      <div class="container-fluid h-100">
       <a class="navbar-brand nav-link" href="#">LOGO</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse h-100" id="navbarNavDropdown">
-        <ul class="nav navbar-nav ms-auto h-100 ">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">SERVICES</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="events.html">EVENTS</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              LOGIN
-            </a>
-            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="member-login.html">MEMBER LOGIN</a></li>
-              <li><a class="dropdown-item" href="employee-login.html">EMPLOYEE LOGIN</a></li>
-            </ul>
-          </li>
-        </ul>
+          <div class="collapse navbar-collapse h-100" id="navbarNavDropdown">
+              <ul class="nav navbar-nav ms-auto h-100 ">
+                  <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="resources.html">RESOURCES</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="events.html">EVENTS</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      LOGIN
+                      </a>
+                      <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
+                      <li><a class="dropdown-item" href="member-login.html">MEMBER LOGIN</a></li>
+                      <li><a class="dropdown-item" href="employee-login.html">EMPLOYEE LOGIN</a></li>
+                      </ul>
+                  </li>
+              </ul>
+          </div>
       </div>
-    </div>
   </nav>
 
 
@@ -78,7 +78,7 @@
 </div>
 </div>
 
-  
+
 
   <!-- Footer -->
   <footer class="text-center bg-1 mb-0">
@@ -86,7 +86,7 @@
       <span class="fa fa-chevron-up"></span>
     </a><br><br><br><br><br><br>
     <p>Footer</p>
-</footer> 
+</footer>
 </body>
 
 </html>
