--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">  <link rel="stylesheet" href="index.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>  <script src="myScript.js"></script>
@@ -17,67 +17,35 @@
 
 <body>
   <nav class="navbar navbar-expand-sm h-100 bg-1" id="top">
-    <div class="container-fluid h-100">
+      <div class="container-fluid h-100">
       <a class="navbar-brand nav-link" href="#">LOGO</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse h-100" id="navbarNavDropdown">
-        <ul class="nav navbar-nav ms-auto h-100 ">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">SERVICES</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="events.html">EVENTS</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              LOGIN
-            </a>
-            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="member-login.html">MEMBER LOGIN</a></li>
-              <li><a class="dropdown-item" href="employee-login.html">EMPLOYEE LOGIN</a></li>
-            </ul>
-          </li>
-        </ul>
+          <div class="collapse navbar-collapse h-100" id="navbarNavDropdown">
+              <ul class="nav navbar-nav ms-auto h-100 ">
+                  <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="resources.html">RESOURCES</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="events.html">EVENTS</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      LOGIN
+                      </a>
+                      <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
+                      <li><a class="dropdown-item" href="member-login.html">MEMBER LOGIN</a></li>
+                      <li><a class="dropdown-item" href="employee-login.html">EMPLOYEE LOGIN</a></li>
+                      </ul>
+                  </li>
+              </ul>
+          </div>
       </div>
-    </div>
   </nav>
-
-  <!--
-  <nav class="navbar bg-1 pt-0 pb-0">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand nav-link" href="#myPage">Logo</a>
-      </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav navbar-right">
-          <li class="nav-item"><a class="nav-link" href="#">HOME</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">SERVICES & AMENITIES</a></li>
-          <li class="nav-item"><a class="nav-link" href="events.html">EVENTS</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">CONTACT</a></li>
-          <li class="dropdown nav-item">
-          <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">LOGIN
-          <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li class="nav-item"><a class="nav-link" href="employee-login.html">Employee Login</a></li>
-            <li class="nav-item"><a class="nav-link" href="member-login.html">Member Login</a></li>
-          </ul>
-        </li>
-        <li><a class="nav-link" href="#"><span class="glyphicon glyphicon-search"></span></a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  -->
 
   <!-- Jumbotron -->
 <div class="jumbotron jumbotron-image">
@@ -142,9 +110,18 @@
 
     <div class="row ft">
       <div class="col-md-4">
-        <p><span class="fa fa-map-pin"></span> Miami, US</p>
-        <p><span class="fa fa-phone"></span> Phone: +00 1515151515</p>
-        <p><span class="fa fa-envelope"></span> Email: mail@mail.com</p>
+        <p><span class="fa-stack fa-1x">
+            <i class="fa fa-circle fa-stack-1x"></i>
+            <i class="fa fa-map-marker fa-stack-1x"></i>
+          </span> Boca Raton, US</p>
+        <p><span class="fa-stack fa-1x">
+            <i class="fa fa-circle fa-stack-1x"></i>
+            <i class="fa fa-phone fa-stack-1x"></i>
+           </span> Phone: +00 1515151515</p>
+        <p><span class="fa-stack fa-1x">
+            <i class="fa fa-circle fa-stack-1x"></i>
+            <i class="fa fa-envelope fa-stack-1x"></i>
+           </span> Email: mail@mail.com</p>
       </div>
       <div class="col-md-8">
         <div class="row">
@@ -170,10 +147,15 @@
 
 <!-- Footer -->
 <footer class="text-center bg-1 mb-0">
-  <a class="up-arrow" href="#top" data-toggle="tooltip" title="TO TOP">
-    <span class="fa fa-chevron-up"></span>
+  <a href="#top" data-toggle="tooltip" title="TO TOP">
+    <span class="fa-stack fa-1x">
+      <i class="fa fa-circle fa-stack-1x"></i>
+      <i class="fa fa-chevron-up fa-stack-1x"></i>
+    </span>
   </a><br><br><br><br><br><br>
   <p>Footer</p>
+  <div class="container-fluid bg-ft">
+  </div>
 </footer>
   <script src="js/scripts.js"></script>
 </body>
