--- a/resources.html
+++ b/resources.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">  <link rel="stylesheet" href="index.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>  <script src="myScript.js"></script>
@@ -27,7 +27,7 @@
                             <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">SERVICES</a>
+                            <a class="nav-link" href="resources.html">RESOURCES</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="events.html">EVENTS</a>
@@ -48,29 +48,22 @@
 
         <!-- Container Top -->
         <div class="container-fluid">
-            <div id="band" class="container text-center">
-              <h3>Loerm Ipsum</h3>
-              <p><em>We love music!</em></p>
+            <div id="band" class="container text-center pt-3 pb-3">
+              <h3>Tranportation</h3>
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
               <br>
               <div class="row">
-                <div class="col-sm-4">
-                  <p class="text-center"><strong>Name</strong></p><br>
-                  <a href="#demo">
-                    <img src="dummy-image.jpeg" class="rounded-circle person" alt="Random Name" width="255" height="255">
-                  </a>
+                <div class="col-sm-2">
                 </div>
                 <div class="col-sm-4">
-                  <p class="text-center"><strong>Name</strong></p><br>
-                  <a href="#demo2">
-                    <img src="dummy-image.jpeg" class="rounded-circle person" alt="Random Name" width="255" height="255">
-                  </a>
+                  <p class="text-center"><strong>Bus</strong></p><br>
+                  <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
                 </div>
                 <div class="col-sm-4">
-                  <p class="text-center"><strong>Name</strong></p><br>
-                  <a href="#demo3">
-                    <img src="dummy-image.jpeg" class="rounded-circle person" alt="Random Name" width="255" height="255">
-                  </a>
+                  <p class="text-center"><strong>Carpool</strong></p><br>
+                  <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+                </div>
+                <div class="col-sm-2">
                 </div>
               </div>
             </div>
@@ -78,24 +71,25 @@
 
         <!-- Container bottom -->
         <div class="container-fluid bg-3">
-            <div class="container bg-4">
+            <div class="container pb-3">
                 <div class="row">
-                    <div class="col-sm-4">
-                        <p>Points of interest</p>
-                    </div>
-                    <div class="col-sm-8 end-0 d-flex justify-content-end">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d57191.06859543219!2d-80.1539006952269!3d26.37691111925743!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1spoints%20of%20interest%20and%20food%20in%20boca%20raton!5e0!3m2!1sen!2sus!4v1646854350912!5m2!1sen!2sus" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                    </div>
+                  <h3 class="text-center">Points of Interest</h3>
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d57191.06859543219!2d-80.1539006952269!3d26.37691111925743!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1spoints%20of%20interest%20and%20food%20in%20boca%20raton!5e0!3m2!1sen!2sus!4v1646854350912!5m2!1sen!2sus" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
         </div>
 
         <!-- Footer -->
         <footer class="text-center bg-1 mb-0">
-            <a class="up-arrow" href="#top" data-toggle="tooltip" title="TO TOP">
-            <span class="fa fa-chevron-up"></span>
-            </a><br><br><br><br><br><br>
-            <p>Footer</p>
+          <a href="#top" data-toggle="tooltip" title="TO TOP">
+            <span class="fa-stack fa-1x">
+              <i class="fa fa-circle fa-stack-1x"></i>
+              <i class="fa fa-chevron-up fa-stack-1x"></i>
+            </span>
+          </a><br><br><br><br><br><br>
+          <p>Footer</p>
+          <div class="container-fluid bg-ft">
+          </div>
         </footer>
         <script src="js/scripts.js"></script>
     </body>
