Changed member login to resident login.

--- a/employee-login.html
+++ b/employee-login.html
@@ -41,7 +41,7 @@
                         LOGIN
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="member-login.html">MEMBER LOGIN</a></li>
+                        <li><a class="dropdown-item" href="resident-login.html">RESIDENT LOGIN</a></li>
                         <li><a class="dropdown-item" href="employee-login.html">EMPLOYEE LOGIN</a></li>
                         </ul>
                     </li>
@@ -63,12 +63,12 @@
               <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Employee Login</h3>
 
               <div class="form-outline mb-4">
-                <input type="email" id="inputEmail" class="form-control form-control-lg" required autofocus />
+                <input type="email" name="email" id="inputEmail" class="form-control form-control-lg" required autofocus />
                 <label class="form-label" for="inputEmail">Email address</label>
               </div>
 
               <div class="form-outline mb-4">
-                <input type="password" id="inputPassword" class="form-control form-control-lg" required />
+                <input type="password" name="password" id="inputPassword" class="form-control form-control-lg" required />
                 <label class="form-label" for="inputPassword">Password</label>
               </div>
 
