--- a/events.html
+++ b/events.html
@@ -40,7 +40,7 @@
                       LOGIN
                       </a>
                       <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="member-login.html">MEMBER LOGIN</a></li>
+                      <li><a class="dropdown-item" href="resident-login.html">RESIDENT LOGIN</a></li>
                       <li><a class="dropdown-item" href="employee-login.html">EMPLOYEE LOGIN</a></li>
                       </ul>
                   </li>
