--- a/resident-login.html
+++ b/resident-login.html
@@ -41,7 +41,7 @@
                       LOGIN
                       </a>
                       <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="member-login.html">MEMBER LOGIN</a></li>
+                      <li><a class="dropdown-item" href="resident-login.html">RESIDENT LOGIN</a></li>
                       <li><a class="dropdown-item" href="employee-login.html">EMPLOYEE LOGIN</a></li>
                       </ul>
                   </li>
@@ -56,9 +56,9 @@
         <form class="form-signin">
             <h1 class="h3 mb-3 font-weight-normal text-center">Member Login</h1>
             <label for="inputEmail" class="sr-only">Email address</label>
-            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+            <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
             <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+            <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
             <div class="checkbox mb-3 text-center">
             <label>
                 <input type="checkbox" value="remember-me"> Remember me
