Added images to home page and employee login.

--- a/index.html
+++ b/index.html
@@ -82,10 +82,9 @@
 </div>
 
 <!-- Container Middle -->
-<div class="container-fluid pt-3 pb-2">
+<div class="container-fluid pt-3 pb-3">
   <div class="container">
-    <h3 class="text-center">Lorem Ipsum</h3>
-    <p class="text-center">Lorem ipsum we'll play you some music.</p>
+    <h3 class="text-center">News</h3>
     <div class="row text-center">
       <div class="col-sm-4">
           <p><strong>Lorem Ipsum</strong></p>
