--- a/resident-login.html
+++ b/resident-login.html
@@ -54,7 +54,7 @@
 <div class="container-fluid w-100 bg-3 height">
     <div class="flex bg-2 justify-content-center align-item-center w-100">
         <form class="form-signin">
-            <h1 class="h3 mb-3 font-weight-normal text-center">Member Login</h1>
+            <h1 class="h3 mb-3 font-weight-normal text-center">Resident Login</h1>
             <label for="inputEmail" class="sr-only">Email address</label>
             <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
             <label for="inputPassword" class="sr-only">Password</label>
