--- a/events.html
+++ b/events.html
@@ -20,7 +20,7 @@
 <body>
   <nav class="navbar navbar-expand-sm h-100 bg-1" id="top">
       <div class="container-fluid h-100">
-      <a class="navbar-brand nav-link" href="#">LOGO</a>
+      <a class="navbar-brand nav-link" href="index.html">LOGO</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
