--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <nav class="navbar navbar-expand-sm h-100 bg-1" id="top">
       <div class="container-fluid h-100">
-      <a class="navbar-brand nav-link" href="#">LOGO</a>
+      <a class="navbar-brand nav-link" href="index.html">LOGO</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
@@ -47,9 +47,19 @@
       </div>
   </nav>
 
-  <!-- Jumbotron -->
-<div class="jumbotron jumbotron-image">
-</div>
+<!-- Hero Image -->
+<section class="jtimage">
+  <div class="inner">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+          <h1>Logistic Owls</h1>
+          <p>Retirement Community</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- Container Top -->
 <div class="container-fluid bg-3">
@@ -59,20 +69,20 @@
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     <br>
     <div class="row">
-      <div class="col-sm-4">
-        <p class="text-center"><strong>Name</strong></p><br>
+      <div class="col-sm-4 pt-4">
+        <p class="text-center pb-0"><strong>Name</strong></p><br>
         <a href="#demo">
           <img src="dummy-image.jpeg" class="rounded-circle person" alt="Random Name" width="255" height="255">
         </a>
       </div>
-      <div class="col-sm-4">
-        <p class="text-center"><strong>Name</strong></p><br>
+      <div class="col-sm-4 pt-4">
+        <p class="text-center pb-0"><strong>Name</strong></p><br>
         <a href="#demo2">
           <img src="dummy-image.jpeg" class="rounded-circle person" alt="Random Name" width="255" height="255">
         </a>
       </div>
-      <div class="col-sm-4">
-        <p class="text-center"><strong>Name</strong></p><br>
+      <div class="col-sm-4 pt-4">
+        <p class="text-center pb-0"><strong>Name</strong></p><br>
         <a href="#demo3">
           <img src="dummy-image.jpeg" class="rounded-circle person" alt="Random Name" width="255" height="255">
         </a>
