--- a/resources.html
+++ b/resources.html
@@ -56,11 +56,11 @@
                 <div class="col-sm-2">
                 </div>
                 <div class="col-sm-4">
-                  <p class="text-center"><strong>Bus</strong></p><br>
+                  <p class="text-center"><strong>Bus</strong></p>
                   <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
                 </div>
                 <div class="col-sm-4">
-                  <p class="text-center"><strong>Carpool</strong></p><br>
+                  <p class="text-center"><strong>Carpool</strong></p>
                   <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
                 </div>
                 <div class="col-sm-2">
@@ -73,7 +73,7 @@
         <div class="container-fluid bg-3">
             <div class="container pt-4 pb-3">
                 <div class="row">
-                  <h3 class="text-center">Points of Interest</h3>
+                  <h3 class="text-center pb-1">Points of Interest</h3>
                   <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d57191.06859543219!2d-80.1539006952269!3d26.37691111925743!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1spoints%20of%20interest%20and%20food%20in%20boca%20raton!5e0!3m2!1sen!2sus!4v1646854350912!5m2!1sen!2sus" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
