Updated footer on all pages.

--- a/index.html
+++ b/index.html
@@ -155,24 +155,20 @@
 </div>
 
 <!-- Footer -->
-<footer class="text-center bg-1 mb-0" id="footer">
+<footer class="bg-1 text-center" id="footer">
   <a href="#top" data-toggle="tooltip" title="TO TOP">
-    <span class="fa-stack fa-1x">
-      <i class="fa fa-chevron-up fa-stack-1x"></i>
-    </span>
+      <i class="fa fa-chevron-up"></i>
   </a>
   <div class="footer-top">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-6 footer-links">
+                <div class="col-lg-3 col-md-6 footer-links text-center">
                     <h4>Useful Links</h4>
-                    <ul>
+                    <ul class="list-unstyled">
                         <li><i class="fa fa-chevron-right"></i> <a href="#">Home</a></li>
                         <li><i class="fa fa-chevron-right"></i> <a href="#">About us</a></li>
-                        <li><i class="fa fa-chevron-right"></i> <a href="#">Services</a></li>
-                        <li><i class="fa fa-chevron-right"></i> <a href="#">Terms of service</a></li>
-                        <li><i class="fa fa-chevron-right"></i> <a href="#">Privacy policy</a></li>
-                    </ul>
+                        <li><i class="fa fa-chevron-right"></i> <a href="resources.html">Recources</a></li>
+                        <li><i class="fa fa-chevron-right"></i> <a href="#">Terms of service</a></li>                    </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 footer-contact">
                     <h4>Contact Us</h4>
