--- a/resources.html
+++ b/resources.html
@@ -80,17 +80,37 @@
         </div>
 
         <!-- Footer -->
-        <footer class="text-center bg-1 mb-0">
-          <a href="#top" data-toggle="tooltip" title="TO TOP">
-            <span class="fa-stack fa-1x">
-              <i class="fa fa-circle fa-stack-1x"></i>
-              <i class="fa fa-chevron-up fa-stack-1x"></i>
-            </span>
-          </a><br><br><br><br><br><br>
-          <p>Footer</p>
-          <div class="container-fluid bg-ft">
-          </div>
-        </footer>
+<footer class="bg-1 text-center" id="footer">
+  <a href="#top" data-toggle="tooltip" title="TO TOP">
+      <i class="fa fa-chevron-up"></i>
+  </a>
+  <div class="footer-top">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 footer-links text-center">
+                    <h4>Useful Links</h4>
+                    <ul class="list-unstyled">
+                        <li><i class="fa fa-chevron-right"></i> <a href="#">Home</a></li>
+                        <li><i class="fa fa-chevron-right"></i> <a href="#">About us</a></li>
+                        <li><i class="fa fa-chevron-right"></i> <a href="resources.html">Recources</a></li>
+                        <li><i class="fa fa-chevron-right"></i> <a href="#">Terms of service</a></li>                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-6 footer-contact">
+                    <h4>Contact Us</h4>
+                    <p> A108 Adam Street <br> Boca Raton, FL 535022<br> United States <br><br> <strong>Phone:</strong> +1 (151)515-151<br> <strong>Email:</strong> mail@mail.com<br> </p>
+                </div>
+                <div class="col-lg-6 col-md-6 footer-info">
+                    <h3>About</h3>
+                    <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+                    <div class="social-links mt-3"> <a href="#" class="twitter"><i class="fa fa-twitter"></i></a> <a href="#" class="facebook"><i class="fa fa-facebook"></i></a> <a href="#" class="instagram"><i class="fa fa-instagram"></i></a> <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a> </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="copyright"> © Copyright <strong><span>Logisic Owls</span></strong>. All Rights Reserved </div>
+    </div>
+</footer>
         <script src="js/scripts.js"></script>
     </body>
 </html>
